# Executorch-Tutorials

./: .gitignore  CMakeLists.txt  README.md
Building_from_Source/: README.md
Building_from_Source/comparison_cpu_gpu/: CMakeLists.txt  export_model.py  main.cpp
Building_from_Source/running_on_devices_cpu/: CMakeLists.txt  bench_low_level.cpp  main.cpp
Building_from_Source/running_on_devices_gpu/: CMakeLists.txt  export_model.py  main.cpp
Getting_Started_with_ExecuTorch/: README.md
Getting_Started_with_ExecuTorch/running_on_desktop/: export_model.py  test_model.py
Graph_Partitioning/: README.md
Graph_Partitioning/mobilenet/: analysis_model.py  export_moblienet.py  exynos_backend_assignment.csv  full_backend_assignment.csv  view_graph.py  view_graph_exynos_csv.py  view_graph_vulkan_csv.py  view_graph_xnn_csv.py  vulkan_backend_assignment.csv
Graph_Partitioning/resnet50/: exynos_backend_assignment.csv  view_graph_exynos_csv.py  view_graph_vulkan_csv.py  view_graph_xnn_csv.py  vulkan_backend_assignment.csv  xnnpack_backend_assignment.csv
Graph_Partitioning/vit/: analysis_vit.py  export_vit.py  exynos_backend_assignment.csv  view_graph.py  view_graph_exynos_csv.py  view_graph_vulkan_csv.py  view_graph_xnn_csv.py  vulkan_backend_assignment.csv  xnnpack_backend_assignment.csv
Model_Export_and_Lowering/: README.md  export_model.py  export_model_with_ptd.py  model.ptd  test_ptd.py  test_pte.py
Profiling/mobilenet/: README.md  etdump.etdp  export_model.py  main.py  profiling_results.csv
Running_Llama/: .gitignore  CMakeLists.txt  README.md  export_llama.py
Running_SmolLM2/: README.md  export_smollm.py
